# pilot-hdc-bff-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  gunicorn_config.py  pyproject.toml  run.py
.github/workflows/: hdc-pipeline.yml
app/: api_registry.py  config.py  main.py  namespace.py
app/clients/: lineage.py
app/components/: types.py
app/components/request/: context.py
app/components/user/: models.py
app/models/: base_models.py  dataset_models.py  error_model.py  file_models.py  lineage_models.py  manifest_models.py  project_models.py  validation_models.py
app/resources/: dependencies.py  error_handler.py  health_check.py  helpers.py  validation_service.py
app/resources/authorization/: decorator.py  exceptions.py  models.py
app/routers/: api_root.py
app/routers/v1/: api_dataset.py  api_file.py  api_lineage.py  api_manifest.py  api_project.py  api_validation.py
app/services/dataset/: client.py
tests/: Dockerfile  Jenkinsfile  conftest.py  gunicorn_config.py  helper.py  pyproject.toml  run.py
tests/app/: api_registry.py  config.py  logger.py  main.py  namespace.py
tests/app/clients/: lineage.py
tests/app/components/: test_types.py
tests/app/components/user/: test_models.py
tests/app/models/: base_models.py  dataset_models.py  error_model.py  file_models.py  lineage_models.py  manifest_models.py  project_models.py  validation_models.py
tests/app/resources/: dependencies.py  error_handler.py  health_check.py  helpers.py  validation_service.py
tests/app/resources/authorization/: decorator.py  exceptions.py  models.py
tests/app/routers/: api_root.py
tests/app/routers/v1/: api_dataset.py  api_file.py  api_lineage.py  api_manifest.py  api_project.py  api_validation.py
tests/app/services/dataset/: client.py  test_client.py
tests/app/services/project/: client.py
tests/fixtures/services/: dataset.py  project.py
tests/resources/: test_authorization.py  test_dependencies.py
tests/routers/: test_api_root.py
tests/routers/v1/: test_api_dataset.py  test_api_file.py  test_api_lineage.py  test_api_manifest.py  test_api_project.py  test_api_validation_api.py
